// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AnchoredOverlay renders consistently 1`] = `
.c0 {
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji";
  line-height: 1.5;
  color: #24292f;
}

.c1 {
  position: relative;
  display: inline-block;
  padding: 6px 16px;
  font-family: inherit;
  font-weight: 600;
  line-height: 20px;
  white-space: nowrap;
  vertical-align: middle;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  border-radius: 6px;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-align: center;
  font-size: 14px;
  color: #24292f;
  background-color: #f6f8fa;
  border: 1px solid rgba(27,31,36,0.15);
  box-shadow: 0 1px 0 rgba(27,31,36,0.04),inset 0 1px 0 rgba(255,255,255,0.25);
}

.c1:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c1:focus {
  outline: none;
}

.c1:disabled {
  cursor: default;
}

.c1:disabled svg {
  opacity: 0.6;
}

.c1:hover {
  background-color: #f3f4f6;
  border-color: rgba(27,31,36,0.15);
}

.c1:focus {
  border-color: rgba(27,31,36,0.15);
  box-shadow: 0 0 0 3px rgba(9,105,218,0.3);
}

.c1:active {
  background-color: hsla(220,14%,94%,1);
  box-shadow: inset 0 0.15em 0.3em rgba(27,31,36,0.15);
}

.c1:disabled {
  color: #8c959f;
  background-color: #f6f8fa;
  border-color: rgba(27,31,36,0.15);
}

<div
  className="c0"
  color="fg.default"
  data-portal-root={true}
  fontFamily="normal"
>
  <button
    aria-expanded={false}
    aria-haspopup="true"
    className="c1"
    id="react-aria-1"
    onClick={[Function]}
    onKeyDown={[Function]}
    tabIndex={0}
  >
    Anchor Button
  </button>
</div>
`;

exports[`AnchoredOverlay should render consistently when open 1`] = `
.c0 {
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji";
  line-height: 1.5;
  color: #24292f;
}

.c1 {
  position: relative;
  display: inline-block;
  padding: 6px 16px;
  font-family: inherit;
  font-weight: 600;
  line-height: 20px;
  white-space: nowrap;
  vertical-align: middle;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  border-radius: 6px;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-align: center;
  font-size: 14px;
  color: #24292f;
  background-color: #f6f8fa;
  border: 1px solid rgba(27,31,36,0.15);
  box-shadow: 0 1px 0 rgba(27,31,36,0.04),inset 0 1px 0 rgba(255,255,255,0.25);
}

.c1:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c1:focus {
  outline: none;
}

.c1:disabled {
  cursor: default;
}

.c1:disabled svg {
  opacity: 0.6;
}

.c1:hover {
  background-color: #f3f4f6;
  border-color: rgba(27,31,36,0.15);
}

.c1:focus {
  border-color: rgba(27,31,36,0.15);
  box-shadow: 0 0 0 3px rgba(9,105,218,0.3);
}

.c1:active {
  background-color: hsla(220,14%,94%,1);
  box-shadow: inset 0 0.15em 0.3em rgba(27,31,36,0.15);
}

.c1:disabled {
  color: #8c959f;
  background-color: #f6f8fa;
  border-color: rgba(27,31,36,0.15);
}

.c2 {
  background-color: #ffffff;
  box-shadow: 0 1px 3px rgba(27,31,36,0.12),0 8px 24px rgba(66,74,83,0.12);
  position: absolute;
  min-width: 192px;
  max-width: 640px;
  height: auto;
  width: auto;
  border-radius: 12px;
  overflow: hidden;
  -webkit-animation: overlay-appear 200ms cubic-bezier(0.33,1,0.68,1);
  animation: overlay-appear 200ms cubic-bezier(0.33,1,0.68,1);
  visibility: var(--styled-overlay-visibility);
}

.c2:focus {
  outline: none;
}

<div>
  <div
    class="c0"
    color="fg.default"
    data-portal-root="true"
    font-family="normal"
  >
    <button
      aria-expanded="true"
      aria-haspopup="true"
      class="c1"
      id="react-aria-1"
      tabindex="0"
    >
      Anchor Button
    </button>
    <div
      id="__primerPortalRoot__"
      style="position: absolute; top: 0px; left: 0px;"
    >
      <div
        style="position: relative; z-index: 1;"
      >
        <div
          class="c2"
          data-focus-trap="active"
          height="auto"
          role="none"
          style="top: 4px; left: 0px; --styled-overlay-visibility: visible;"
          width="auto"
        >
          <button
            class="focus-visible"
            data-focus-visible-added=""
            tabindex="0"
            type="button"
          >
            Focusable Child
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;
